Fix crash on screen changes

BUG: 333313
REVIEW: 118324